[gd_scene load_steps=21 format=3 uid="uid://c1cu6nncbperl"]

[ext_resource type="Texture2D" uid="uid://4jntsskvqrs1" path="res://Sprites/ui/square.png" id="1_3yrey"]
[ext_resource type="Texture2D" uid="uid://j28vawu3pmdi" path="res://Sprites/ui/title_background.png" id="1_45ckf"]
[ext_resource type="Script" path="res://Scenes/Main/main_menu.gd" id="1_pnq27"]
[ext_resource type="FontFile" uid="uid://4ahc3p5yg0fh" path="res://Fonts/Bebas Neue Pro Expanded Bold Italic.otf" id="3_rkwvb"]
[ext_resource type="Script" path="res://Scenes/Main/menu_button.gd" id="4_yaaee"]
[ext_resource type="Texture2D" uid="uid://biy3bbqeggxap" path="res://Sprites/ui/button.png" id="6_2vowa"]
[ext_resource type="Texture2D" uid="uid://0r2p8gp578le" path="res://Sprites/ui/button_pressed.png" id="7_hulxc"]
[ext_resource type="FontFile" uid="uid://bk4os2yyrjyde" path="res://Fonts/Bebas Neue Pro Expanded Regular.otf" id="8_4k0ob"]
[ext_resource type="AudioStream" uid="uid://bq1q2dcxkmtnj" path="res://Audio/SFX/UI/cursor01.wav" id="9_l1e4r"]
[ext_resource type="AudioStream" uid="uid://dahl3lwgbkb54" path="res://Audio/SFX/UI/cursor05.wav" id="10_2lvx8"]

[sub_resource type="Theme" id="Theme_sy5uv"]
default_font = ExtResource("8_4k0ob")
default_font_size = 80

[sub_resource type="Theme" id="Theme_ndv6b"]
default_font = ExtResource("3_rkwvb")
default_font_size = 60

[sub_resource type="Theme" id="Theme_l787v"]
default_font = ExtResource("8_4k0ob")
default_font_size = 40

[sub_resource type="Animation" id="Animation_jdml5"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_wwumh"]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0.428571), Color(0, 0, 0, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"load_versus"
}]
}

[sub_resource type="Animation" id="Animation_pmpjs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/CreditsLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_51r4g"]
resource_name = "fade_out_2"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0.428571), Color(0, 0, 0, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"versus"
}]
}

[sub_resource type="Animation" id="Animation_jk650"]
resource_name = "credits_fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/CreditsLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_oibhg"]
resource_name = "credits_fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/CreditsLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7koas"]
_data = {
"RESET": SubResource("Animation_pmpjs"),
"credits_fade_in": SubResource("Animation_jk650"),
"credits_fade_out": SubResource("Animation_oibhg"),
"fade_in": SubResource("Animation_jdml5"),
"fade_out": SubResource("Animation_wwumh"),
"fade_out_2": SubResource("Animation_51r4g")
}

[node name="Node2D" type="Node2D"]
script = ExtResource("1_pnq27")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("1_45ckf")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 56.0
offset_top = 192.8
offset_right = 96.0
offset_bottom = 232.8

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
custom_minimum_size = Vector2(600, 300)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VersusButton" type="TextureButton" parent="Control/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("6_2vowa")
texture_pressed = ExtResource("6_2vowa")
texture_focused = ExtResource("7_hulxc")
script = ExtResource("4_yaaee")

[node name="Label" type="Label" parent="Control/VBoxContainer/VersusButton"]
layout_mode = 0
offset_left = 27.0
offset_right = 627.0
offset_bottom = 120.0
theme = SubResource("Theme_sy5uv")
theme_override_colors/font_color = Color(0.117647, 0.117647, 0.117647, 1)
text = "Versus"
vertical_alignment = 1

[node name="Credits" type="TextureButton" parent="Control/VBoxContainer"]
layout_direction = 1
layout_mode = 2
texture_normal = ExtResource("6_2vowa")
texture_pressed = ExtResource("6_2vowa")
texture_focused = ExtResource("7_hulxc")
script = ExtResource("4_yaaee")

[node name="Label" type="Label" parent="Control/VBoxContainer/Credits"]
layout_mode = 0
offset_left = 27.0
offset_right = 627.0
offset_bottom = 120.0
theme = SubResource("Theme_sy5uv")
theme_override_colors/font_color = Color(0.117647, 0.117647, 0.117647, 1)
text = "Credits"
vertical_alignment = 1

[node name="Label" type="Label" parent="Control"]
offset_left = -9.18384
offset_top = -148.055
offset_right = 241.816
offset_bottom = -80.0546
theme = SubResource("Theme_ndv6b")
text = "Main Menu"

[node name="CreditsLabel" type="Label" parent="Control"]
modulate = Color(1, 1, 1, 0)
offset_left = 998.0
offset_top = -76.8
offset_right = 1818.0
offset_bottom = 263.2
theme = SubResource("Theme_l787v")
text = "Credits:
Godot Rollback Netcode Addon - David Snopek
SG Physics 2D Addon - David Snopek
Procedural Flame Shader - Mina PÃªcheux
The simplest outline shader (via material) - RPaciorek
Hit Effect Shader - Le Lu
Water Shader - ScriptedWave"
horizontal_alignment = 1

[node name="FadeSprite" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0)
position = Vector2(954.171, 546.613)
scale = Vector2(2.01897, 1.54289)
texture = ExtResource("1_3yrey")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7koas")
}
autoplay = "fade_in"

[node name="SelectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_l1e4r")

[node name="FocusSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_2lvx8")

[connection signal="button_down" from="Control/VBoxContainer/VersusButton" to="." method="_on_versus_button_button_down"]
[connection signal="focus_exited" from="Control/VBoxContainer/VersusButton" to="." method="_on_versus_button_focus_exited"]
[connection signal="button_down" from="Control/VBoxContainer/Credits" to="." method="_on_credits_button_down"]
[connection signal="focus_exited" from="Control/VBoxContainer/Credits" to="." method="_on_credits_focus_exited"]
